# cecdesk

./: .gitignore  Cargo.toml  DEV_ENVIRONMENT.md  README.md  docker-compose.dev.yml  setup-dev-env.sh  test-setup.sh
.github/workflows/: ci.yml  nightly.yml  pr-check.yml
.kiro/specs/cec-remote/: design.md  requirements.md  tasks.md
.kiro/specs/remote-desktop-client/: design.md  requirements.md  tasks.md
.kiro/specs/remote-desktop-control/: design.md  requirements.md
.kiro/specs/webrtc-test-refactor/: design.md  requirements.md  tasks.md
docker/: DevTools.dockerfile  Flutter.dockerfile  Node.dockerfile  Rust.dockerfile  coturn.conf
flutter-client/: README.md  pubspec.yaml
flutter-client/android/app/: build.gradle.kts
flutter-client/ios/Runner/: Info.plist
flutter-client/ios/Runner.xcodeproj/: project.pbxproj
flutter-client/lib/: main.dart
flutter-client/lib/src/: app.dart
flutter-client/linux/: CMakeLists.txt
flutter-client/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter-client/linux/runner/: my_application.cc
flutter-client/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter-client/macos/Runner.xcodeproj/: project.pbxproj
flutter-client/rust_bridge/: Cargo.toml
flutter-client/rust_bridge/src/: lib.rs
flutter-client/test/: widget_test.dart
flutter-client/test/integration/: cross_platform_integration_test.dart
flutter-client/web/: index.html  manifest.json
flutter-client/windows/: CMakeLists.txt
flutter-client/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter-client/windows/runner/: Runner.rc  main.cpp
rust-core/: Cargo.toml  build.rs
rust-core/src/: access_control.rs  access_control_test.rs  diagnostics.rs  ffi.rs  file_transfer.rs  input_control.rs  integration_test.rs  lib.rs  logging.rs  logging_test.rs  network.rs  network_test.rs  performance.rs  screen_capture.rs  screen_capture_test.rs  security.rs  security_test.rs  session_manager.rs  signaling.rs  signaling_test.rs  webrtc_engine.rs  webrtc_engine_test.rs  webrtc_mock.rs
scripts/: dev-setup.sh  dev.sh  run-all-tests.sh
wechat-miniprogram/: PROJECT_STATUS.md  app.js  app.json  app.wxss  package-lock.json  package.json
wechat-miniprogram/images/: README.md
wechat-miniprogram/pages/connection/: connection.js  connection.wxml  connection.wxss
wechat-miniprogram/pages/file-transfer/: file-transfer.js  file-transfer.wxml  file-transfer.wxss
wechat-miniprogram/tests/: file-transfer-service.pbt.test.js  file-transfer-service.test.js  webrtc-service.test.js
wechat-miniprogram/utils/: canvas-renderer.js  file-transfer-service.js  touch-input-handler.js  webrtc-service.js
(+67 files in other folders)
