[package]
name = "remote-desktop-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# WebRTC dependencies
webrtc = "0.10"
webrtc-util = "0.8"
webrtc-dtls = "0.9"
webrtc-srtp = "0.12"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Network
uuid = { version = "1.0", features = ["v4"] }
url = "2.0"
chrono = { version = "0.4", features = ["serde"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
futures = "0.3"

# Media processing
image = "0.24"
bytes = "1.0"

# FFI support
cxx = "1.0"

# Cryptography for end-to-end encryption
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
x25519-dalek = "2.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
base64 = "0.21"
ring = "0.17"
hex = "0.4"

# Testing
proptest = { version = "1.0", optional = true }

[dev-dependencies]
proptest = "1.0"

[lib]
name = "remote_desktop_core"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cxx-build = "1.0"